# shapeedit

./: README.md  pyproject.toml  setup.py
examples/: convert_db1s_to_db1fb.py  make_ohw_dblslip7_5d.py  remove_nohab_my_mirrors.py
examples/data/: DB22f_A1tDblSlip7_5d.s  DB22f_A1tDblSlip7_5d.sd  DB2_A1tDblSlip7_5d.s  DB2_A1tDblSlip7_5d.sd
examples/data/processed/DB1fb/: DB1fb_a2t500r20d.s
examples/data/processed/OhwDblSlip7_5d/: DB2f_A1tDblSlip7_5d.s  DB2f_A1tDblSlip7_5d.sd
examples/images/: DB1s_DB1fb.xcf  DblSlip7_5d.xcf  NohabMyMirrors.xcf
shapeedit/: __init__.py  distance.py  grouping.py  shapeedit.py
shapeedit/editors/: distancelevel_editor.py  lodcontrol_editor.py  primitive_editor.py  shape_editor.py  subobject_editor.py  texture_editor.py  triangle_editor.py  vertex_editor.py
shapeedit/helpers/: subobject_helper.py
shapeedit/math/: coordinates.py  distance.py  geometry.py
shapeedit/math3d/: geometry.py
shapeedit/utils/: grouping.py
shapemod/: __init__.py  geometry.py  grouping.py  shapemod.py
tests/: __init__.py  conftest.py  test_editor_distancelevel.py  test_editor_lodcontrol.py  test_editor_primitive.py  test_editor_shape.py  test_editor_subobject.py  test_editor_triangle.py  test_editor_vertex.py  test_geometry.py  test_math_coordinates.py  test_math_distance.py  test_math_geometry.py  test_point.py  test_shapeedit.py
