[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapemod"
version = "0.1.0b0"
description = "A library that provides experimental operations for modifying existing MSTS/ORTS shape files."
readme = "README.md"
authors = [{name = "Peter Grønbæk Andersen", email = "peter@grnbk.io"}]
license = {text = "GNU GPL v3"}
dependencies = [
    "numpy",
    "regex>=2024.11.6,<2025.0",
    "shapeio==0.1.0b0"
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/pgroenbaek/shapemod"