[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapeedit"
version = "0.5.0b4"
description = "A Python module for programmatically modifying MSTS/ORTS shape files without using 3D modeling software."
readme = "README.md"
authors = [{name = "Peter Grønbæk Andersen", email = "peter@grnbk.io"}]
license = {text = "GNU GPL v3"}
dependencies = [
    "numpy",
    "shapeio==0.5.0b4"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/pgroenbaek/shapeedit"
Issues = "https://github.com/pgroenbaek/shapeedit/issues"
Source = "https://github.com/pgroenbaek/shapeedit"